--- a/src/pages/header.pug
+++ b/src/pages/header.pug
@@ -1,7 +1,7 @@
 header.header
   .container
     .row-header
-      a.logo-img(href='#!')
+      a.logo-img(href='./../../index.html')
         img(src='./../../public/header/logo.svg' alt='')
       .search-form
         .search
@@ -9,4 +9,4 @@ header.header
           button.search-button Знайти
         button
           img(src='./../../public/header/filter.svg' alt='')
-      button.user-logo В
+      a.user-logo(href="./../../my_cars.html") В
