--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -8,6 +8,7 @@ $buttopn-info: #86d748;
 $white: #fff;
 $black: #000;
 $footer: #1b1621;
+$background_card: #86a0b6;
 // Font Family
 $font-family: 'Roboto', sans-serif;
 $font-family-inknut: 'Inknut Antiqua', sans-serif;
