add a functionality to my_car component

--- a/src/pages/main_carinfo.pug
+++ b/src/pages/main_carinfo.pug
@@ -23,6 +23,7 @@ main.carinfo
         .form-group
           label(for='driver_license') Ліцензія на водіння машини:
           input#driver_license(type='file', name='driver_license')
+        p.payment-cost Вартість бронювання: 0 грн
         .payment-option-wrapper
           .payment-options
             label.payment-option
