--- a/src/scss/block/carinfo/_carinfo.scss
+++ b/src/scss/block/carinfo/_carinfo.scss
@@ -65,6 +65,11 @@
 		font-size: 1.5em;
 	}
 }
+
+.payment-cost {
+	font-size: 1.5em;
+}
+
 .payment-option-wrapper {
 	display: flex;
 	justify-content: space-between;
