--- a/src/pages/header.pug
+++ b/src/pages/header.pug
@@ -4,9 +4,7 @@ header.header
       a.logo-img(href='./../../index.html')
         img(src='./../../public/header/logo.svg' alt='')
       .search-form
-        .search
-          input.search-input(type='text' placeholder='Пошук...')
-          button.search-button Знайти
-        button
+        input.search-input(type='text' placeholder='Пошук...')
+        button.search-button
           img(src='./../../public/header/filter.svg' alt='')
       a.user-logo(href="./../../my_cars.html") В
