all functiom added to website

--- a/src/pages/main.pug
+++ b/src/pages/main.pug
@@ -1,5 +1,10 @@
 main.main
-	.container
-		.car-cards
-			
-
+  .container
+    .filter
+      h3.filter-title Фільтр до типу машини:
+      select.filter-brand#brand
+        option(value='') Усі
+        option(value='Mercedes') Mercedes
+        option(value='Toyota') Toyota
+		
+    .car-cards
